# kivo-music

./: .cursorrules  .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/audio/: commands.rs  diag.rs  diagnostics.rs  error.rs  errors.rs  logging.rs  mod.rs  ring.rs  smoke.rs  validation.rs
src-tauri/src/audio/buffer/: mod.rs  ring_buffer.rs
src-tauri/src/audio/commands/: devices.rs  files.rs  playback.rs  queue.rs  tick.rs  types.rs
src-tauri/src/audio/decoder_ffmpeg/: PATCH-NOTES.md  PATCH-NOTES_AUD-P0-SHELL-027-FFMPEG-DIAG.md  PATCH-NOTES_AUD-P0-SHELL-028.md  api.rs  convert.rs  dll_dirs.rs  dll_names.rs  dll_set.rs  dynlib.rs  ffi.rs  header_probe.rs  media_probe.rs  media_probe_abi.rs  mod.rs  probe.rs  resample.rs  resample_frame.rs  types.rs  win_dll_dir.rs
src-tauri/src/audio/output_wasapi/: devices.rs  mod.rs  pack.rs  stats.rs  wasapi_shared.rs  wasapi_shared_consumer.rs  wasapi_shared_consumer_diag.rs  wasapi_shared_producer.rs  wasapi_shared_summary.rs
src-tauri/src/audio/pipeline/: channel_map.rs  linear_resampler.rs  mod.rs
src-tauri/src/audio/state/: decode_to_wav.rs  decode_to_wav_utils.rs  decode_to_wav_validate.rs  mod.rs  play_file_wasapi_shared.rs  play_file_wasapi_shared_consumer.rs  play_file_wasapi_shared_producer.rs  play_file_wasapi_shared_runtime.rs  play_file_wasapi_shared_validation.rs  wav_writer.rs
src-tauri/src/library_db/: PATCH-NOTES_LIB-P0-SHELL-067.md  errors.rs  mod.rs  open.rs
(+162 files in other folders)
