[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
ringbuf = "0.4"
crossbeam-channel = "0.5"
dashmap = "5"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
